--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                     </h2>
                   </div>
 
-                  <div ref={textContainerRef} className="prose prose-lg max-w-none mb-8 p-6 bg-gray-50 rounded-lg max-h-96 overflow-y-auto">
+                  <div className="prose prose-lg max-w-none mb-8 p-6 bg-gray-50 rounded-lg max-h-96 overflow-y-auto">
                     {currentSample.text.split('\n').map((paragraph, idx) => (
                       <p key={idx} className="mb-4 text-gray-800 whitespace-pre-wrap"
                          dangerouslySetInnerHTML={{ __html: formatText(paragraph) }}>
