--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                     <div className="p-4 bg-indigo-50 rounded-lg border border-indigo-200">
                       <h3 className="font-semibold text-gray-900 mb-2">Your Favorite Sample:</h3>
                       <p className="text-gray-700">
-                        You enjoyed the {favoriteSample.isAI ? 'AI-generated' : 'human-written'} sample most:{' '}
+                        The {favoriteSample.isAI ? 'AI-generated' : 'human-written'} sample:{' '}
                         <span className="italic">{favoriteSample.description}</span>
                       </p>
                     </div>
@@ -813,4 +813,3 @@
     </script>
 </body>
 </html>
-
