--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
                             <div>
                               <span className="font-medium">Actually:</span>{' '}
                               <span className={sample.isAI ? 'text-purple-700' : 'text-blue-700'}>
-                                {sample.isAI ? 'AI Generated' : 'Human Written'}
+                                {sample.writingtype || (sample.isAI ? 'AI Generated' : 'Human Written')}
                               </span>
                             </div>
                             <div>
